<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollContainer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lbl_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/lbl_date" >
        </TextView>
    	<TextView
            android:id="@+id/dateDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"            
            style="@android:style/Widget.Holo.Spinner"
            android:height="48dp"            
            android:inputType="none" >           
        </TextView>
      
        <TextView
            android:id="@+id/lbl_odometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/lbl_odometer" >
            <requestFocus />
        </TextView>

        <EditText
            android:id="@+id/odometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:height="48dp"
            android:text="" >
        </EditText>

        <TextView
            android:id="@+id/lbl_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/lbl_amount" >
        </TextView>

        <EditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:height="48dp"
            android:text="" >
        </EditText>

        <TextView
            android:id="@+id/lbl_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/lbl_price" >
        </TextView>

        <EditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:height="48dp"
            android:text="" >
        </EditText>

        <Button
            android:id="@+id/btn_save_filling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/btn_save_filling" >
       	</Button>
        
    </LinearLayout>

</ScrollView>